# GraphScope

charts/graphscope-store/: values.yaml
docs/: gremlin_tutorials.md  index.html  supported_gremlin_steps.md
docs/interactive_engine/neo4j/: supported_cypher.md
docs/latest/: index.html
docs/latest/reference/gae_java/: allclasses-index.html  allclasses.html  allpackages-index.html  constant-values.html  deprecated-list.html  help-doc.html  index-all.html  index.html  overview-summary.html  overview-tree.html  serialized-form.html
docs/reference/gae_java/: allclasses-index.html  allclasses.html  allpackages-index.html  constant-values.html  deprecated-list.html  help-doc.html  index-all.html  index.html  overview-summary.html  overview-tree.html  serialized-form.html
flex/engines/hqps_db/core/: sync_engine.h
flex/engines/hqps_db/database/: mutable_csr_interface.h
flex/storages/rt_mutable_graph/: schema.cc
flex/tests/hqps/: match_query.h  sample_query.h
flex/utils/property/: column.h
interactive_engine/: .flattened-pom.xml  pom.xml
interactive_engine/benchmark/: README.md
interactive_engine/benchmark/config/: interactive-benchmark.properties
interactive_engine/compiler/: .flattened-pom.xml  Makefile  build_ir_core.sh  log  physical_plan.bytes  pom.xml  result.bytes  set_properties.sh
interactive_engine/compiler/BI_QUERY/: BI_10_1.cypher  BI_12.cypher  BI_14_1.cypher  BI_17_2.cypher  BI_18_1.cypher  BI_1_1.cypher  BI_2.cypher  BI_3_1.cypher  BI_3_2.cypher  BI_4_1.cypher  BI_5_1.cypher  BI_5_2.cypher  BI_6.cypher  BI_9.cypher
interactive_engine/compiler/BI_QUERY_GOPT/: BI_10_1.cypher  BI_10_2.cypher  BI_11_1.cypher  BI_11_2.cypher  BI_11_3.cypher  BI_12.cypher  BI_13_1.cypher  BI_13_2.cypher  BI_13_3.cypher  BI_14_1.cypher  BI_14_2.cypher  BI_16_1.cypher  BI_16_2.cypher  BI_17_1.cypher  BI_17_2.cypher  BI_18_1.cypher  BI_18_2.cypher  BI_1_1.cypher  BI_2.cypher  BI_3_1.cypher  BI_4_1.cypher  BI_4_2.cypher  BI_5_1.cypher  BI_5_2.cypher  BI_6.cypher  BI_7.cypher  BI_8_1.cypher  BI_8_2.cypher  BI_9.cypher
interactive_engine/compiler/CBO_QUERY/: Q1-a.gremlin  Q1-b.gremlin  Q2-a.gremlin  Q2-b.gremlin  Q3-a.gremlin  Q3-b.gremlin  Q4-a.gremlin  Q4-b.gremlin
interactive_engine/compiler/IC_QUERY_GOPT/: IC_10_5_1.cypher  IC_10_5_2.cypher  IC_11_3_1.cypher  IC_11_3_2.cypher  IC_12.cypher  IC_13.cypher  IC_13_1.cypher  IC_13_2.cypher  IC_14.cypher  IC_1_1.cypher  IC_1_2.cypher  IC_2.cypher  IC_3_3_1.cypher  IC_3_3_2.cypher  IC_4.cypher  IC_5_3_1.cypher  IC_5_3_2.cypher  IC_5_3_3.cypher  IC_6_1.cypher  IC_6_2.cypher  IC_7_1.cypher  IC_7_2.cypher  IC_8.cypher  IC_9_1.cypher  IC_9_2.cypher
interactive_engine/compiler/conf/: iacdev.json  iacdev_statistics.txt  ir.compiler.properties  ldbc1_hierarchy_statistics.txt
interactive_engine/compiler/gopt/: Q_R_2_with_opt  Q_R_2_without_opt  Q_R_6  Q_T_1_without_opt  Q_T_2_without_opt  Q_T_3_without_opt  Q_T_4  Q_T_5
interactive_engine/compiler/queries/: BI_16  BI_2  BI_3  BI_5  BI_6
interactive_engine/compiler/query/: Q_R_1_without_opt  Q_R_5  Q_R_7_with_opt  Q_R_7_without_opt  Q_R_8_with_opt  Q_R_8_without_opt  Q_T_1_with_opt  Q_T_2_with_opt  Q_T_2_without_opt  Q_T_3_with_opt
interactive_engine/compiler/scale/: BI_6
interactive_engine/compiler/scripts/: cbo.sh  job.sh  ldbc.sh  load_data.sh  rbo.sh  type_inference.sh
interactive_engine/data_load_tools/: pom.xml
interactive_engine/executor/: Cargo.toml
interactive_engine/executor/assembly/grin/: Cargo.toml
interactive_engine/executor/assembly/grin_graphar/: Cargo.toml
interactive_engine/executor/engine/pegasus/executor/: Cargo.toml
interactive_engine/executor/engine/pegasus/executor/src/: reactor.rs
interactive_engine/executor/ir/: Cargo.toml  Sparsify.py
interactive_engine/executor/ir/graph_proxy/: Cargo.toml
interactive_engine/executor/ir/graph_proxy/src/: lib.rs
interactive_engine/executor/ir/graph_proxy/src/adapters/: mod.rs
interactive_engine/executor/ir/graph_proxy/src/adapters/exp_store/: mod.rs  read_graph.rs
interactive_engine/executor/ir/graph_proxy/src/adapters/grin_store/: details.rs  mod.rs  native_utils.rs  partitioner.rs  read_graph.rs
interactive_engine/executor/ir/graph_proxy/src/adapters/gs_store/: read_graph.rs
interactive_engine/executor/ir/graph_proxy/src/apis/graph/element/: mod.rs  path.rs  property.rs  vertex.rs
interactive_engine/executor/store/: Cargo.toml
interactive_engine/ldbc_snb_bi/dyn_type/: Cargo.toml
interactive_engine/ldbc_snb_bi/graph_store/: Cargo.toml  schema.json
interactive_engine/ldbc_snb_bi/ldbc_ir/: Cargo.toml
interactive_engine/ldbc_snb_bi/ldbc_ir/src/: lib.rs
interactive_engine/ldbc_snb_bi/ldbc_ir/src/queries/: graph.rs
interactive_engine/ldbc_snb_bi/ldbc_queries/: Cargo.toml
interactive_engine/ldbc_snb_bi/ldbc_queries/src/: lib.rs
interactive_engine/ldbc_snb_bi/ldbc_queries/src/queries/: graph.rs  mod.rs
interactive_engine/ldbc_snb_bi/ldbc_queries/src/queries/khop/: bi2_hop.rs  bi2_hop_record.rs  bi2_hop_record_aliasopt.rs  bi2_hop_record_evalopt.rs  bi2_hop_record_filter_pushdown.rs  bi2_hop_record_recordopt.rs  bi2_sub_hop.rs  khop.rs  khop_record.rs  khop_record_aliasopt.rs  khop_record_aliasrecordopt.rs  khop_record_precache.rs  khop_record_recordopt.rs  khop_record_recordopt_entry.rs  khop_sub.rs  mod.rs
interactive_engine/ldbc_snb_bi/ldbc_queries/src/queries/ldbc/: bi2.rs  bi2_single_partition.rs  bi2_sub.rs  graph.rs  mod.rs
interactive_engine/ldbc_snb_bi/mcsr/: Cargo.toml
interactive_engine/src/instance-manager/: pom.xml
interactive_engine/tests/: failover_test.py
k8s/: Makefile  gaia-ir-cluster.yaml  gaia-ir-compiler.Dockerfile  gaia-ir-rpc.Dockerfile  gaia-ir.Dockerfile  generate_gaia_ir_cluster_yaml.py  gopt-bench.Dockerfile
k8s/dockerfiles/: gopt-bench-exp.Dockerfile  gopt-bench.Dockerfile
k8s/gie_standalone/: Makefile  build.Dockerfile
k8s/gie_standalone/runtime/: executor.Dockerfile  frontend.Dockerfile
research/query_service/ir/common/: Cargo.toml
research/query_service/ir/common/src/: lib.rs  utils.rs
(+3940 files in other folders)
