[workspace]

[package]
name = "ir_queries"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pegasus = { path = "../../executor/engine/pegasus/pegasus" }
pegasus_common = { path = "../../executor/engine/pegasus/common" }
pegasus_server = { path = "../../executor/engine/pegasus/server" }
chrono = "0.4"
tonic = { version = "0.6", features = ["default", "compression"] }
prost = "0.8"
tokio = { version = "1.0", features = ["macros", "sync", "rt-multi-thread"] }
structopt = "0.3"
crossbeam-channel = "0.4.4"
crossbeam-queue = "0.3"
crossbeam-utils = "0.8.7"
futures = "0.3.19"
lazy_static = "1.3.0"
graph_store = { path = "../../executor/store/exp_store" }
log = "0.4"
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
itertools = "0.10.2"
mcsr = { path = "../mcsr" }
mpi = { path = "../rsmpi" }
runtime = { path = "../../executor/ir/runtime" }
graph_proxy = { path = "../../executor/ir/graph_proxy" }
ir_common = { path = "../../executor/ir/common" }
dyn_type = { path = "../../executor/common/dyn_type" }
vec_map = "0.8.2"

[build-dependencies]
tonic-build = { version = "0.5", features = ["default", "compression"] }

[features]
default = []
gcip = []

[lib]
name = "ir_queries"
path = "src/lib.rs"

[[bin]]
name = "run_ir_query"

