[package]
name = "grin_runtime"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
log4rs = "1.2"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
structopt = "0.3"
lru_time_cache = "0.11"
dotproperties = "0.1.0"
tokio = { version = "1.24", features = ["macros", "sync"] }

# todo: remove default-features = false when default features are removed in grin.
grin =  {path = "../../store/grin", default-features = false, features = ["grin_enable_graph_partition"]}
pegasus = { path = "../../engine/pegasus/pegasus", package = "pegasus" }
pegasus_network = { path = "../../engine/pegasus/network" }
pegasus_server = { path = "../../engine/pegasus/server" }
graph_proxy = { path = "../../ir/graph_proxy", features = ["grin_v6d"] }
runtime = {path = "../../ir/runtime"}
