[package]
name = "graph_proxy"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
lazy_static = "1.3.0"
mcsr = {path = "../../store/mcsr"}
graph_store = {path = "../../store/exp_store"}
global_query = {path = "../../store/global_query", optional = true}
# todo: remove default-features = false when default features are removed in grin.
grin = {path = "../../store/grin", default-features = false}
dyn_type = { path = "../../common/dyn_type" }
ir_common = {path = "../common"}
pegasus = { path = "../../engine/pegasus/pegasus" }
pegasus_common = { path = "../../engine/pegasus/common" }
ahash = "0.8"
rand = "0.8.5"

[features]
default = []
proto_inplace = ["ir_common/proto_inplace"]
with_global_query = ["global_query"]
with_v6d = ["global_query/with_v6d", "with_global_query"]

# grin related features:
# grin partition related features that GIE cares about
grin_partition_default = [ "grin/grin_trait_natural_id_for_partition" , "grin/grin_enable_graph_partition", "grin/grin_trait_fast_vertex_ref", "grin/grin_enable_vertex_ref"]
# grin query related features that GIE cares about
grin_query_default = [ "grin/grin_with_vertex_property", "grin/grin_with_edge_property", "grin/grin_trait_natural_id_for_vertex_type", "grin/grin_trait_natural_id_for_edge_type", "grin/grin_trait_natural_id_for_vertex_property",  "grin/grin_trait_natural_id_for_edge_property", "grin/grin_with_vertex_property_name", "grin/grin_with_edge_property_name","grin/grin_enable_row", "grin/grin_enable_vertex_primary_keys"]
# other grin features that different storage may diff
grin_enable_vertex_list_iterator = ["grin/grin_enable_vertex_list_iterator", "grin/grin_enable_vertex_list"]
grin_enable_adjacent_list_iterator = ["grin/grin_enable_adjacent_list_iterator", "grin/grin_enable_adjacent_list"]
grin_enable_list_iterator = ["grin_enable_vertex_list_iterator", "grin_enable_adjacent_list_iterator"]
grin_enable_vertex_list_array = ["grin/grin_enable_vertex_list_array", "grin/grin_enable_vertex_list"]
grin_enable_adjacent_list_array = ["grin/grin_enable_adjacent_list_array", "grin/grin_enable_adjacent_list"]
grin_enable_list_array = ["grin_enable_vertex_list_array", "grin_enable_adjacent_list_array"]
# grin default features that GIE cares about
with_grin = ["grin_partition_default", "grin_query_default"]

# for different storage implementations, set features of grin_v6d, or grin_gart, etc.
grin_v6d = ["with_grin", "grin_enable_list_iterator"]
grin_gart = ["with_grin", "grin_enable_list_iterator"]
