[package]
name = "graph_proxy"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
lazy_static = "1.3.0"
mcsr = {path = "../../store/mcsr"}
graph_store = {path = "../../store/exp_store"}
global_query = {path = "../../store/global_query", optional = true}
grin = {path = "../../store/grin", opitonal = true, version = "0.1.1"}
dyn_type = { path = "../../common/dyn_type" }
ir_common = {path = "../common"}
pegasus = { path = "../../engine/pegasus/pegasus" }
pegasus_common = { path = "../../engine/pegasus/common" }
ahash = "0.8"
rand = "0.8.5"

[features]
default = []
proto_inplace = ["ir_common/proto_inplace"]
with_global_query = ["global_query"]
with_v6d = ["global_query/with_v6d", "with_global_query"]

# grin related features that different storage may diff
grin_enable_list_iterator = ["grin/grin_enable_vertex_list_iterator", "grin/grin_enable_vertex_list", "grin/grin_enable_adjacent_list_iterator", "grin/grin_enable_adjacent_list"]
grin_enable_list_array = ["grin/grin_enable_vertex_list_array", "grin/grin_enable_vertex_list", "grin/grin_enable_adjacent_list_array", "grin/grin_enable_adjacent_list"]
grin_enable_vertex_primary_keys = ["grin/grin_enable_vertex_primary_keys"]

with_grin = []

# for different storage implementations, set features of grin_v6d, grin_gart, etc.
grin_v6d = ["with_grin", "grin/grin_features_enable_v6d", "grin_enable_vertex_primary_keys"]
grin_gart = ["with_grin", "grin/grin_features_enable_gart"]
grin_graphar = ["with_grin", "grin/grin_features_enable_graphar"]
