[package]
name = "ir_common"
version = "0.1.0"
edition = "2018"

[dependencies]
dyn_type = { path = "../../../dyn_type" }
pegasus_common = { path = "../../../engine/pegasus/common" }
prost = "0.10"
serde = { version = "1.0", features = ["derive"] }
tonic = "0.7.2"

[build-dependencies]
prost-build = "0.10"

[features]
default = []
proto_inplace = []
