[package]
name = "pegasus_executor"
version = "0.1.0"
authors = ["chenqiang.mcq <chenqiang.mcq@alibaba-inc.com>"]
edition = "2018"

[dependencies]
log = "0.4"
lazy_static = "1.3.0"
crossbeam-channel = { path = "/workspaces/crossbeam/crossbeam-channel" }
crossbeam-queue = { path = "/workspaces/crossbeam/crossbeam-queue" }
crossbeam-utils = { path = "/workspaces/crossbeam/crossbeam-utils" }
num_cpus = "1.11"
pegasus_common = { path = "../common" }
pegasus_memory = { path = "../memory" }
